@@ -1,3 +1,11 @@
+2002-04-17 Naba Kumar <kh_naba@users.sourceforge.net>
+
+	* src/launcher.c: Made a very messy work around
+	for the launcher authentication to work properly.
+	
+	* src/find_replace.c: Applied the missing patch
+	from Dan Elphick <dre00r@ecs.soton.ac.uk>
+	
 2002-04-16 Andy Piper <andy.piper@freeuk.com>
 
 	* src/cvs.c, src/main_menubar_def.h: made message strings
